--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ header{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+
 .ul-nav a{
     text-decoration: none;
 }
@@ -32,11 +33,14 @@ header{
     list-style: none;
     padding-left: 10px;
     padding-right: 10px;
+    transition: transform .2s;
 }
 
 .ul-nav li:hover{
-    background-color: pink;
-    border-radius: 5px;
+    border-bottom: 2px solid pink;
+    transition-delay: 0,60s;
+    transform: scale(1.2);
+
 }
 
 .logo{
@@ -63,6 +67,7 @@ header{
     font-size: 70px;
     padding-bottom: 150px;
 }
+
 
 .centered-text p{
     position: absolute;
@@ -107,6 +112,8 @@ header{
    background-color: white;
 }
 
+
+
 .container-fotos{
     display: flex;
     display: flex;
@@ -117,7 +124,7 @@ header{
     gap: 16px;
     max-width: 1400px;
     margin: 0 auto;
-    padding: 20px 10px;
+    padding: 40px 50px;
 }
 
 .container-fotos img{
@@ -127,6 +134,12 @@ header{
     height: 300px;
     object-fit: cover;
     border-radius: 10px;
+    transition: transform .5s;
+}
+
+.container-fotos img:hover{
+    transform: scale(1.1)
+
 }
 
 .overlay{
@@ -162,4 +175,34 @@ header{
   position: absolute;
   bottom: 8px;
   left: 16px;
+}
+
+footer{
+    background-color: rgb(56, 56, 56);
+    width: 100%;
+    height: 200px;
+    border-top: 1px solid rgba(182, 178, 179, 0.918);
+    display: grid;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    grid-template-columns: 50% 50%;
+}
+
+.logo-p{
+    font-size: 30px;
+    justify-content: left;
+    padding-top: 20px;
+    border: 2px solid black;
+    width: 50%;
+    height: auto;
+    text-align: center;
+}
+
+.logo-p p{
+    font-size: 15px
+}
+
+.socials{
+    border: 2px solid black;
+    width: 48%;
+    text-align: center;
 }
